Modificando entidad Cuenta

--- a/siscop-caritas-web/src/main/webapp/mattoActividades/mtto.xhtml
+++ b/siscop-caritas-web/src/main/webapp/mattoActividades/mtto.xhtml
@@ -115,10 +115,10 @@
                                         <p:column headerText="Código">
                                             <h:outputText value="#{act.id}" />
                                         </p:column>
-                                        <p:column headerText="Nombre">
+                                        <p:column headerText="Nombre actividad">
                                             <h:outputText value="#{act.nombre}" />
                                         </p:column>
-                                        <p:column headerText="Proyecto">
+                                        <p:column headerText="Nombre proyecto">
                                             <h:outputText value="#{act.idproyecto.nombreCorto}" />
                                         </p:column>
                                         <p:column headerText="Fecha inicio">
