--- a/siscop-caritas-web/src/main/webapp/mattoCuentas/mtto.xhtml
+++ b/siscop-caritas-web/src/main/webapp/mattoCuentas/mtto.xhtml
@@ -123,128 +123,116 @@
                                     </div>
                                 </p:tab>
                             </div>
-                            <p:tab id="catalogo" title="Catalogo">
-                                <p:tree
-                                    id="tree-catalogo-cuentas" 
-                                    value="#{cuentasControllerTree.arbolCuentas}" 
-                                    var="nodo" 
-                                    selectionMode="single"
-                                    selection="#{cuentasControllerTree.nodoActual}"
-                                    filterBy="#{nodo}"
-                                    animate="true"
-                                    styleClass="tree-cuentas"
-                                    >
-                                    <p:ajax event="select" 
-                                            update=":formTabs" 
-                                            listener="#{cuentasControllerTree.cargarCuentaSeleccionada()}"/>
-                                    <p:treeNode expandedIcon="ui-icon-folder-open" collapsedIcon="ui-icon-folder-collapsed">
-                                        <h:outputText value="#{nodo}" />
-                                    </p:treeNode>
-                                </p:tree>
-                            </p:tab>
-                            <p:tab id="detalle" title="Detalle">
-                                <p:panelGrid>
-
+                            <div class="card">
+                                <p:tab id="catalogo" title="Catalogo">
+                                    <div class="card">
+                                        <p:outputLabel value="Cargar catalogo desde archivo"/>
+                                        <p:fileUpload fileUploadListener="#{mttoCuentasContables.subirYprocesarArchivo}" 
+                                                      mode="advanced" 
+                                                      dragDropSupport="false"
+                                                      sizeLimit="10000000" 
+                                                      fileLimit="1" 
+                                                      allowTypes="/(\.|\/)(xlsx|xls)$/" 
+                                                      label="Buscar"
+                                                      uploadLabel="Subir"
+                                                      cancelLabel="Cancelar"/>
+                                        <div class="ui-g-12 ui-md-12">
+                                            <p:staticMessage 
+                                                severity="info" 
+                                                summary="Informacion: " 
+                                                detail="#{mttoCuentasContables.msjPestaniaCatalogo}" 
+                                                rendered="#{mttoCuentasContables.verMsjNoHayCatalogo()}"
+                                                />
+                                        </div>
+                                        <p:tree
+                                            id="tree-catalogo-cuentas" 
+                                            value="#{mttoCuentasContables.arbolCuentas}" 
+                                            var="nodo" 
+                                            selectionMode="single"
+                                            selection="#{mttoCuentasContables.nodoActual}"
+                                            filterBy="#{nodo}"
+                                            animate="true"
+                                            styleClass="tree-cuentas"
+                                            rendered="#{mttoCuentasContables.verArbolCuentas()}"
+                                            >
+                                            <p:ajax event="select" 
+                                                    update=":formTabs:tabs:catalogo" 
+                                                    listener="#{mttoCuentasContables.cargarCuentaSeleccionada()}"/>
+                                            <p:treeNode expandedIcon="ui-icon-folder-open" collapsedIcon="ui-icon-folder-collapsed">
+                                                <h:outputText value="#{nodo}" />
+                                            </p:treeNode>
+                                        </p:tree>
+                                    </div>
+                                </p:tab>
+                            </div>
+                            <div class="card">
+                                <p:tab id="detalle" title="Detalle">
                                     <p:menubar>
                                         <p:menuitem
-                                            value="Guardar"
-                                            icon="ui-icon-disk"
-                                            actionListener="#{cuentasControllerTree.accionBtnGuardar()}"
+                                            id="cuentaNueva"
+                                            value="Nuevo" 
+                                            action="#{mttoCuentasContables.limpiarFormCuenta()}"
+                                            icon="fa fa-user-plus"
+                                            update=":formTabs"
+                                            />                                       
+                                        <p:menuitem 
+                                            id="guardar"
+                                            value="Guardar" 
+                                            action="#{mttoCuentasContables.accionBtnGuardar()}"
+                                            icon="fa fa-save"                                                
                                             update=":formTabs:growl 
                                             :formTabs:tabs:panel-cuenta 
-                                            :formTabs:tabs:tree-catalogo-cuentas 
-                                            :formDialogCuentas:contenedor-tree-dialog"
-                                            />
-                                        <p:menuitem
-                                            value="Limpiar"
-                                            icon="fa fa-eraser"
-                                            update=":formTabs"
-                                            />
+                                            "/>
                                     </p:menubar>
-                                </p:panelGrid>
-                                <p:panel
-                                    id="panel-cuenta"
-                                    style="margin-top: 5px;" 
-                                    header="Cuenta">
-
-                                    <div class="ui-g" style="width: 700px;">
-                                        <div class="ui-md-6">
-                                            <p:outputLabel for="txtSubcuentaDe"
-                                                           value="Subcuenta de:"
-                                                           />
-                                        </div>
-                                        <div class="ui-md-6">
-                                            <div class="ui-inputgroup input-cta-padre">
-                                                <p:inputText id="txtSubcuentaDe"
-                                                             value="#{cuentasControllerTree.cuentaPadreActual}"
-                                                             disabled="true"
+                                    <div jsf:id="panel-cuenta" class="ui-g ui-panelgrid-blank">
+                                        <div class="ui-g-12" >
+                                            <div class="ui-g-4" >
+                                                <p:outputLabel for="txtSubcuentaDe" value="Subcuenta de:"/>
+                                                <div class="ui-inputgroup input-cta-padre">
+                                                    <p:inputText id="txtSubcuentaDe"
+                                                                 value="#{mttoCuentasContables.cuentaActual.idctapadre.nombre}"
+                                                                 disabled="true"
+                                                                 >
+                                                    </p:inputText>
+                                                    <p:commandButton icon="ui-icon-search"  
+                                                                     styleClass="white-button"
+                                                                     type="button"
+                                                                     onclick="PF('dialogCuentas').show()"/>  
+                                                </div>
+                                            </div>
+                                            <div class="ui-g-4" >
+                                                <p:outputLabel for="txtCodigoCuenta" value="Codigo: "/>
+                                                <p:inputText id="txtCodigoCuenta" 
+                                                             value="#{mttoCuentasContables.cuentaActual.codigo}"
                                                              >
+                                                    <p:message for="txtCodigoCuenta"/>
                                                 </p:inputText>
-                                                <p:commandButton icon="ui-icon-search"  
-                                                                 styleClass="white-button"
-                                                                 type="button"
-                                                                 onclick="PF('dialogCuentas').show()"/>  
+                                            </div>
+                                            <div class="ui-g-4" >
+                                                <p:outputLabel for="txtNombreCuenta" value="Nombre: "/>
+                                                <p:inputText id="txtNombreCuenta"
+                                                             value="#{mttoCuentasContables.cuentaActual.nombre}"
+                                                             >
+                                                    <p:message for="txtNombreCuenta"/>
+                                                </p:inputText>
+                                            </div>
+                                            <div class="ui-g-4" >
+                                                <p:outputLabel for="txtDescripcionCuenta" value="Descripcion: "/>
+                                                <p:inputTextarea id="txtDescripcionCuenta"
+                                                                 rows="5" 
+                                                                 cols="30"
+                                                                 value="#{mttoCuentasContables.cuentaActual.descripcion}"
+                                                                 />
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="ui-g" style="width: 700px;">
-                                        <div class="ui-md-6">
-                                            <p:outputLabel for="txtCodigoCuenta" 
-                                                           value="Codigo: "
-                                                           />
-                                        </div>
-                                        <div class="ui-md-6">
-                                            <p:inputText id="txtCodigoCuenta" 
-                                                         value="#{cuentasControllerTree.cuentaActual.codigo}"
-                                                         validator="#{cuentasControllerTree.validaciones.validarCodigoCuenta}"
-                                                         >
-                                                <p:message for="txtCodigoCuenta"/>
-                                            </p:inputText>
-                                        </div>
-                                    </div>
-                                    <div class="ui-g" style="width: 700px;">
-                                        <div class="ui-md-6">
-                                            <p:outputLabel for="txtNombreCuenta"
-                                                           value="Nombre: "
-                                                           />
-                                        </div>
-                                        <div class="ui-md-6">
-                                            <p:inputText id="txtNombreCuenta"
-                                                         value="#{cuentasControllerTree.cuentaActual.nombre}"
-                                                         validator="#{cuentasControllerTree.validaciones.validarNombreCuenta}"
-                                                         >
-                                                <p:message for="txtNombreCuenta"/>
-                                            </p:inputText>
-                                        </div>
-                                    </div>
-                                    <div class="ui-g" style="width: 700px;">
-                                        <div class="ui-md-6">
-                                            <p:outputLabel for="txtDescripcionCuenta"
-                                                           value="Descripcion: "
-                                                           />
-                                        </div>
-                                        <div class="ui-md-6">
-                                            <p:inputTextarea id="txtDescripcionCuenta"
-                                                             rows="5" 
-                                                             cols="30"
-                                                             value="#{cuentasControllerTree.cuentaActual.descripcion}"
-                                                             />
-                                        </div>
-                                    </div>
-                                </p:panel>
-                                <p:fileUpload fileUploadListener="#{cuentasControllerTree.subirYprocesarArchivo}" 
-                                              mode="advanced" 
-                                              dragDropSupport="false"
-                                              sizeLimit="10000000" 
-                                              fileLimit="1" 
-                                              allowTypes="/(\.|\/)(xlsx|xls)$/" 
-                                              label="Buscar"
-                                              uploadLabel="Subir"
-                                              cancelLabel="Cancelar"/>
-                            </p:tab>
+
+                                </p:tab>
+                            </div>
                         </p:tabView>
                     </h:form>
 
+                    <!--
                     <h:form id="formDialogCuentas">
                         <p:dialog id="dialogCuentas" 
                                   widgetVar="dialogCuentas" 
@@ -283,6 +271,7 @@
                             </h:panelGrid>
                         </p:dialog>
                     </h:form>
+                    -->
                 </div>
             </div>
         </div>
